--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
   "version": "1.0.0",
   "private": true,
   "description": "多模型协作AI聊天平台",
-  "keywords": ["ai", "chat", "openai", "claude", "multi-model"],
+  "keywords": [
+    "ai",
+    "chat",
+    "openai",
+    "claude",
+    "multi-model"
+  ],
   "license": "MIT",
   "author": "AI-Chat-Hub Team",
   "type": "module",
@@ -28,12 +34,17 @@
     "prepare": "husky"
   },
   "devDependencies": {
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.19.27",
+    "csv-parse": "^6.1.0",
+    "docx": "^9.5.1",
     "husky": "^9.0.0",
     "lint-staged": "^15.2.0",
+    "mammoth": "^1.11.0",
+    "pdfjs-dist": "^5.4.530",
     "prettier": "^3.2.0",
     "turbo": "^2.0.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "xlsx": "^0.18.5"
   },
   "packageManager": "pnpm@8.14.0",
   "engines": {
