--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -46,10 +46,15 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.0",
-    "@types/node": "^20.10.0",
+    "@types/node": "^20.19.27",
+    "csv-parse": "^6.1.0",
+    "docx": "^9.5.1",
+    "mammoth": "^1.11.0",
+    "pdfjs-dist": "^5.4.530",
     "prisma": "^5.8.0",
     "tsx": "^4.7.0",
     "typescript": "^5.3.0",
-    "vitest": "^1.2.0"
+    "vitest": "^1.2.0",
+    "xlsx": "^0.18.5"
   }
 }
