--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -25,6 +25,7 @@
   },
   "dependencies": {
     "@ai-chat-hub/shared": "workspace:*",
+    "@fastify/compress": "7.0.3",
     "@fastify/cookie": "^9.3.0",
     "@fastify/cors": "^9.0.0",
     "@fastify/helmet": "^11.1.0",
