--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -32,6 +32,7 @@
     "framer-motion": "^12.24.12",
     "katex": "^0.16.27",
     "lucide-react": "^0.312.0",
+    "mermaid": "^11.12.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-markdown": "^9.0.0",
